--- a/styles.css
+++ b/styles.css
@@ -9,21 +9,31 @@ img {
 
 /*  TEXT STYLES */
 .lead {
-    font-size: 2.25rem;
+    font-size: 2.15rem;
     font-weight: 300;
     text-align: center;
 }
+
 
 body {
     margin: 0;
     font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,
     "Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+
 }
+
 
 .featurette-heading {
     font-weight: 300;
     line-height: 1;
     letter-spacing: -.05rem;
     text-align: center;
+
+}
+
+#map,
+body,
+html {
+  height: 400px;
 
 }
